@@ -50,57 +50,181 @@ public class HpcReportsDAOImpl implements HpcReportsDAO
     // Constants
     //---------------------------------------------------------------------//    
     
-	private static final String SUM_OF_DATA_DATE_RANGE_SQL = 
-			"SELECT sum(to_number(meta_attr_value, '9999999999999999999')) FROM public.r_meta_main where meta_attr_name = 'source_file_size' and to_timestamp(CAST(create_ts as double precision)) BETWEEN ? AND ?";
-
+	
+	//USAGE_SUMMARY
 	private static final String SUM_OF_DATA_SQL = 
 			"SELECT sum(to_number(meta_attr_value, '9999999999999999999')) totalSize FROM public.r_meta_main where meta_attr_name = 'source_file_size'";
 
-	private static final String SUM_OF_DATA_BY_DATE_SQL = 
-			"SELECT sum(to_number(meta_attr_value, '9999999999999999999')) totalSize FROM public.r_meta_main where meta_attr_name = 'source_file_size' and to_timestamp(CAST(create_ts as double precision)) BETWEEN ? AND ?";
-
 	private static final String LARGEST_FILE_SQL = 
 			"SELECT max(to_number(meta_attr_value, '9999999999999999999')) maxSize FROM public.r_meta_main where meta_attr_name = 'source_file_size'";
-	
-	private static final String LARGEST_FILE_BY_DATE_SQL = 
-			"SELECT max(to_number(meta_attr_value, '9999999999999999999')) maxSize FROM public.r_meta_main where meta_attr_name = 'source_file_size' and to_timestamp(CAST(create_ts as double precision)) BETWEEN ? AND ?";
 
 	private static final String AVERAGE_FILE_SQL = 
 			"SELECT avg(to_number(meta_attr_value, '9999999999999999999')) maxSize FROM public.r_meta_main where meta_attr_name = 'source_file_size'";
 
-	private static final String AVERAGE_FILE_BY_DATE_SQL = 
-			"SELECT avg(to_number(meta_attr_value, '9999999999999999999')) maxSize FROM public.r_meta_main where meta_attr_name = 'source_file_size' and to_timestamp(CAST(create_ts as double precision)) BETWEEN ? AND ?";
-
 	private static final String TOTAL_NUM_OF_USERS_SQL = 
 			"SELECT count(*) totalUsers FROM public.\"HPC_USER\"";
-	
-	private static final String TOTAL_NUM_OF_USERS_BY_DATE_SQL = 
-	"SELECT count(*) totalUsers FROM public.\"HPC_USER\" where \"CREATED\" BETWEEN ? and ?";
 	
 	private static final String TOTAL_NUM_OF_DATA_OBJECTS_SQL = 
 			"SELECT count(*) totalObjs FROM public.r_data_main";
 
-	private static final String TOTAL_NUM_OF_DATA_OBJECTS_BY_DATE_SQL = 
-			"SELECT count(*) totalObjs FROM public.r_data_main  where to_timestamp(CAST(create_ts as double precision)) BETWEEN ? AND ?";
-
 	private static final String TOTAL_NUM_OF_COLLECTIONS_BY_NAME_SQL = 
-			"select a.meta_attr_value, count(a.meta_attr_name) from r_meta_main a, r_coll_main b, r_objt_metamap c where b.coll_id=c.object_id and c.meta_id=a.meta_id and a.meta_attr_name='collection_type' group by a.meta_attr_value";
-
-	private static final String TOTAL_NUM_OF_COLLECTIONS_BY_NAME_AND_DATE_SQL = 
-			"select a.meta_attr_value, count(a.meta_attr_name) from r_meta_main a, r_coll_main b, r_objt_metamap c where b.coll_id=c.object_id and c.meta_id=a.meta_id and a.meta_attr_name='collection_type' and to_timestamp(CAST(b.create_ts as double precision)) BETWEEN ? AND ? group by a.meta_attr_value";
+			"select a.meta_attr_value attr, count(a.meta_attr_name) cnt from r_meta_main a, r_coll_main b, r_objt_metamap c where b.coll_id=c.object_id and c.meta_id=a.meta_id and a.meta_attr_name='collection_type' group by a.meta_attr_value";
 
 	private static final String TOTAL_NUM_OF_META_ATTRS_SQL = 
 			"SELECT count(*) totalAttrs FROM public.r_meta_main";
 	
-	private static final String TOTAL_NUM_OF_META_ATTRS_BY_DATE_SQL = 
-			"SELECT count(*) totalAttrs FROM public.r_meta_main where to_timestamp(CAST(create_ts as double precision)) BETWEEN ? AND ?";
-
 	private static final String FILE_SIZE_RANGE_SQL = 
 			"SELECT count(*) FROM public.r_meta_main where meta_attr_name = 'source_file_size' and to_number(meta_attr_value, '9999999999999999999') BETWEEN ? AND ?";
 	
+
+	//USAGE_SUMMARY_DATE_RANGE
+	private static final String SUM_OF_DATA_BY_DATE_SQL = 
+			"SELECT sum(to_number(meta_attr_value, '9999999999999999999')) totalSize FROM public.r_meta_main where meta_attr_name = 'source_file_size' and to_timestamp(CAST(create_ts as double precision)) BETWEEN ? AND ?";
+
+	private static final String LARGEST_FILE_BY_DATE_SQL = 
+			"SELECT max(to_number(meta_attr_value, '9999999999999999999')) maxSize FROM public.r_meta_main where meta_attr_name = 'source_file_size' and to_timestamp(CAST(create_ts as double precision)) BETWEEN ? AND ?";
+
+	private static final String AVERAGE_FILE_BY_DATE_SQL = 
+			"SELECT avg(to_number(meta_attr_value, '9999999999999999999')) maxSize FROM public.r_meta_main where meta_attr_name = 'source_file_size' and to_timestamp(CAST(create_ts as double precision)) BETWEEN ? AND ?";
+
+	private static final String TOTAL_NUM_OF_USERS_BY_DATE_SQL = 
+	"SELECT count(*) totalUsers FROM public.\"HPC_USER\" where \"CREATED\" BETWEEN ? and ?";
+	
+	private static final String TOTAL_NUM_OF_DATA_OBJECTS_BY_DATE_SQL = 
+			"SELECT count(*) totalObjs FROM public.r_data_main  where to_timestamp(CAST(create_ts as double precision)) BETWEEN ? AND ?";
+
+	private static final String TOTAL_NUM_OF_COLLECTIONS_BY_NAME_AND_DATE_SQL = 
+			"select a.meta_attr_value attr, count(a.meta_attr_name) cnt from r_meta_main a, r_coll_main b, r_objt_metamap c where b.coll_id=c.object_id and c.meta_id=a.meta_id and a.meta_attr_name='collection_type' and to_timestamp(CAST(b.create_ts as double precision)) BETWEEN ? AND ? group by a.meta_attr_value";
+
+	private static final String TOTAL_NUM_OF_META_ATTRS_BY_DATE_SQL = 
+			"SELECT count(*) totalAttrs FROM public.r_meta_main where to_timestamp(CAST(create_ts as double precision)) BETWEEN ? AND ?";
+
 	private static final String FILE_SIZE_RANGE_BY_DATE_SQL = 
 			"SELECT count(*) FROM public.r_meta_main where meta_attr_name = 'source_file_size' and to_timestamp(CAST(create_ts as double precision)) BETWEEN ? AND ? and to_number(meta_attr_value, '9999999999999999999') BETWEEN ? AND ?";
 
+	//USAGE_SUMMARY_BY_DOC
+	private static final String SUM_OF_DATA_BY_DOC_SQL = 
+			"SELECT sum(to_number(a.meta_attr_value, '9999999999999999999')) totalSize FROM public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name = 'source_file_size' and b.object_id in " +
+			"(select distinct b.object_id from public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name='registered_by_doc' and a.meta_attr_value=? and a.meta_id=b.meta_id)";
+
+	private static final String LARGEST_FILE_BY_DOC_SQL = 
+			"SELECT max(to_number(a.meta_attr_value, '9999999999999999999')) totalSize FROM public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name = 'source_file_size' and b.object_id in " +
+			"(select distinct b.object_id from public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name='registered_by_doc' and a.meta_attr_value=? and a.meta_id=b.meta_id)";
+
+	private static final String AVERAGE_FILE_BY_DOC_SQL = 
+			"SELECT avg(to_number(a.meta_attr_value, '9999999999999999999')) totalSize FROM public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name = 'source_file_size' and b.object_id in " +
+			"(select distinct b.object_id from public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name='registered_by_doc' and a.meta_attr_value=? and a.meta_id=b.meta_id)";
+
+	private static final String TOTAL_NUM_OF_USERS_BY_DOC_SQL = 
+			"SELECT count(*) totalUsers FROM public.\"HPC_USER\" where \"DOC\"=?";
+
+	private static final String TOTAL_NUM_OF_DATA_OBJECTS_BY_DOC_SQL = 
+			"SELECT count(distinct c.data_id) totalObjs FROM public.r_meta_main a, public.r_objt_metamap b, public.r_data_main c where c.data_id = b.object_id and a.meta_attr_name='registered_by_doc' and a.meta_attr_value=? and a.meta_id=b.meta_id"; 
+
+	private static final String TOTAL_NUM_OF_COLLECTIONS_BY_NAME_DOC_SQL = 
+			"select a.meta_attr_value attr, count(a.meta_attr_name) cnt from r_meta_main a, r_coll_main b, r_objt_metamap c where b.coll_id=c.object_id and c.meta_id=a.meta_id and a.meta_attr_name='collection_type' and b.coll_id in"+
+			"(select distinct b.object_id from public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name='registered_by_doc' and a.meta_attr_value=? and a.meta_id=b.meta_id) "+
+			"group by a.meta_attr_value";
+
+	private static final String TOTAL_NUM_OF_META_ATTRS_BY_DOC_SQL = 
+			"SELECT count(a.meta_id) totalAttrs FROM public.r_meta_main a, public.r_objt_metamap b  where a.meta_id = b.meta_id and b.object_id in "+
+			"(select distinct b.object_id from public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name='registered_by_doc' and a.meta_attr_value=? and a.meta_id=b.meta_id) ";
+
+	private static final String FILE_SIZE_RANGE_BY_DOC_SQL = 
+			"SELECT count(*) FROM public.r_meta_main a, public.r_objt_metamap b  where a.meta_id = b.meta_id and a.meta_attr_name = 'source_file_size' and to_number(a.meta_attr_value, '9999999999999999999') BETWEEN ? AND ? and b.object_id in " +
+					"(select distinct b.object_id from public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name='registered_by_doc' and a.meta_attr_value=? and a.meta_id=b.meta_id)";
+	
+	//USAGE_SUMMARY_BY_DOC_BY_DATE_RANGE
+	private static final String SUM_OF_DATA_BY_DOC_DATE_SQL = 
+			"SELECT sum(to_number(a.meta_attr_value, '9999999999999999999')) totalSize FROM public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name = 'source_file_size' and b.object_id in " +
+			"(select b.object_id from public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name='registered_by_doc' and a.meta_attr_value=? and a.meta_id=b.meta_id and to_timestamp(CAST(a.create_ts as double precision)) BETWEEN ? AND ?)";
+
+	private static final String LARGEST_FILE_BY_DOC_DATE_SQL = 
+			"SELECT max(to_number(a.meta_attr_value, '9999999999999999999')) totalSize FROM public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name = 'source_file_size' and b.object_id in " +
+			"(select distinct b.object_id from public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name='registered_by_doc' and a.meta_attr_value=? and a.meta_id=b.meta_id and to_timestamp(CAST(a.create_ts as double precision)) BETWEEN ? AND ?)";
+
+	private static final String AVERAGE_FILE_BY_DOC_DATE_SQL = 
+			"SELECT avg(to_number(a.meta_attr_value, '9999999999999999999')) totalSize FROM public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name = 'source_file_size' and b.object_id in " +
+			"(select distinct b.object_id from public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name='registered_by_doc' and a.meta_attr_value=? and a.meta_id=b.meta_id and to_timestamp(CAST(a.create_ts as double precision)) BETWEEN ? AND ?)";
+
+	private static final String TOTAL_NUM_OF_USERS_BY_DOC_DATE_SQL = 
+			"SELECT count(*) totalUsers FROM public.\"HPC_USER\" where \"DOC\"=? and \"CREATED\" BETWEEN ?  AND ?";
+
+	
+	private static final String TOTAL_NUM_OF_DATA_OBJECTS_BY_DOC_DATE_SQL = 
+			"SELECT count(distinct c.data_id) totalObjs FROM public.r_meta_main a, public.r_objt_metamap b, public.r_data_main c where c.data_id = b.object_id and a.meta_attr_name='registered_by_doc' and a.meta_attr_value=? and a.meta_id=b.meta_id and to_timestamp(CAST(a.create_ts as double precision)) BETWEEN ? AND ? "; 
+
+	private static final String TOTAL_NUM_OF_COLLECTIONS_BY_NAME_DOC_DATE_SQL = 
+			"select a.meta_attr_value attr, count(a.meta_attr_name) cnt from r_meta_main a, r_coll_main b, r_objt_metamap c where b.coll_id=c.object_id and c.meta_id=a.meta_id and a.meta_attr_name='collection_type' and b.coll_id in"+
+			"(select distinct b.object_id from public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name='registered_by_doc' and a.meta_attr_value=? and a.meta_id=b.meta_id and to_timestamp(CAST(a.create_ts as double precision)) BETWEEN ? AND ? ) "+
+			"group by a.meta_attr_value";
+
+	private static final String TOTAL_NUM_OF_META_ATTRS_BY_DOC_DATE_SQL = 
+			"SELECT count(a.meta_id) totalAttrs FROM public.r_meta_main a, public.r_objt_metamap b  where a.meta_id = b.meta_id and b.object_id in "+
+			"(select distinct b.object_id from public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name='registered_by_doc' and a.meta_attr_value=? and a.meta_id=b.meta_id and to_timestamp(CAST(a.create_ts as double precision)) BETWEEN ? AND ?) ";
+
+	private static final String FILE_SIZE_RANGE_BY_DOC_DATE_SQL = 
+			"SELECT count(*) FROM public.r_meta_main a, public.r_objt_metamap b  where a.meta_id = b.meta_id and a.meta_attr_name = 'source_file_size' and to_number(a.meta_attr_value, '9999999999999999999') BETWEEN ? AND ? and b.object_id in " +
+					"(select distinct b.object_id from public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name='registered_by_doc' and a.meta_attr_value=? and a.meta_id=b.meta_id and to_timestamp(CAST(a.create_ts as double precision)) BETWEEN ? AND ?)";
+	
+	//USAGE_SUMMARY_BY_USER
+	private static final String SUM_OF_DATA_BY_USER_SQL = 
+			"SELECT sum(to_number(a.meta_attr_value, '9999999999999999999')) totalSize FROM public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name = 'source_file_size' and b.object_id in " +
+			"(select distinct b.object_id from public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name='registered_by' and a.meta_attr_value=? and a.meta_id=b.meta_id)";
+
+	private static final String LARGEST_FILE_BY_USER_SQL = 
+			"SELECT max(to_number(a.meta_attr_value, '9999999999999999999')) totalSize FROM public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name = 'source_file_size' and b.object_id in " +
+			"(select distinct b.object_id from public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name='registered_by' and a.meta_attr_value=? and a.meta_id=b.meta_id)";
+
+	private static final String AVERAGE_FILE_BY_USER_SQL = 
+			"SELECT avg(to_number(a.meta_attr_value, '9999999999999999999')) totalSize FROM public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name = 'source_file_size' and b.object_id in " +
+			"(select distinct b.object_id from public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name='registered_by' and a.meta_attr_value=? and a.meta_id=b.meta_id)";
+
+	private static final String TOTAL_NUM_OF_DATA_OBJECTS_BY_USER_SQL = 
+			"SELECT count(distinct c.data_id) totalObjs FROM public.r_meta_main a, public.r_objt_metamap b, public.r_data_main c where c.data_id = b.object_id and a.meta_attr_name='registered_by' and a.meta_attr_value=? and a.meta_id=b.meta_id"; 
+
+	private static final String TOTAL_NUM_OF_COLLECTIONS_BY_NAME_USER_SQL = 
+			"select a.meta_attr_value attr, count(a.meta_attr_name) cnt from r_meta_main a, r_coll_main b, r_objt_metamap c where b.coll_id=c.object_id and c.meta_id=a.meta_id and a.meta_attr_name='collection_type' and b.coll_id in"+
+			"(select distinct b.object_id from public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name='registered_by' and a.meta_attr_value=? and a.meta_id=b.meta_id) "+
+			"group by a.meta_attr_value";
+
+	private static final String TOTAL_NUM_OF_META_ATTRS_BY_USER_SQL = 
+			"SELECT count(a.meta_id) totalAttrs FROM public.r_meta_main a, public.r_objt_metamap b  where a.meta_id = b.meta_id and b.object_id in "+
+			"(select distinct b.object_id from public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name='registered_by' and a.meta_attr_value=? and a.meta_id=b.meta_id) ";
+
+	private static final String FILE_SIZE_RANGE_BY_USER_SQL = 
+			"SELECT count(*) FROM public.r_meta_main a, public.r_objt_metamap b  where a.meta_id = b.meta_id and a.meta_attr_name = 'source_file_size' and to_number(a.meta_attr_value, '9999999999999999999') BETWEEN ? AND ? and b.object_id in " +
+					"(select distinct b.object_id from public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name='registered_by' and a.meta_attr_value=? and a.meta_id=b.meta_id)";
+	
+	//USAGE_SUMMARY_BY_USER_BY_DATE_RANGE
+	private static final String SUM_OF_DATA_BY_USER_DATE_SQL = 
+			"SELECT sum(to_number(a.meta_attr_value, '9999999999999999999')) totalSize FROM public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name = 'source_file_size' and b.object_id in " +
+			"(select b.object_id from public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name='registered_by' and a.meta_attr_value=? and a.meta_id=b.meta_id and to_timestamp(CAST(a.create_ts as double precision)) BETWEEN ? AND ?)";
+
+	private static final String LARGEST_FILE_BY_USER_DATE_SQL = 
+			"SELECT max(to_number(a.meta_attr_value, '9999999999999999999')) totalSize FROM public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name = 'source_file_size' and b.object_id in " +
+			"(select distinct b.object_id from public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name='registered_by' and a.meta_attr_value=? and a.meta_id=b.meta_id and to_timestamp(CAST(a.create_ts as double precision)) BETWEEN ? AND ?)";
+
+	private static final String AVERAGE_FILE_BY_USER_DATE_SQL = 
+			"SELECT avg(to_number(a.meta_attr_value, '9999999999999999999')) totalSize FROM public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name = 'source_file_size' and b.object_id in " +
+			"(select distinct b.object_id from public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name='registered_by' and a.meta_attr_value=? and a.meta_id=b.meta_id and to_timestamp(CAST(a.create_ts as double precision)) BETWEEN ? AND ?)";
+
+	private static final String TOTAL_NUM_OF_DATA_OBJECTS_BY_USER_DATE_SQL = 
+			"SELECT count(distinct c.data_id) totalObjs FROM public.r_meta_main a, public.r_objt_metamap b, public.r_data_main c where c.data_id = b.object_id and a.meta_attr_name='registered_by' and a.meta_attr_value=? and a.meta_id=b.meta_id and to_timestamp(CAST(a.create_ts as double precision)) BETWEEN ? AND ? "; 
+
+	private static final String TOTAL_NUM_OF_COLLECTIONS_BY_NAME_USER_DATE_SQL = 
+			"select a.meta_attr_value attr, count(a.meta_attr_name) cnt from r_meta_main a, r_coll_main b, r_objt_metamap c where b.coll_id=c.object_id and c.meta_id=a.meta_id and a.meta_attr_name='collection_type' and b.coll_id in"+
+			"(select distinct b.object_id from public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name='registered_by' and a.meta_attr_value=? and a.meta_id=b.meta_id and to_timestamp(CAST(a.create_ts as double precision)) BETWEEN ? AND ? ) "+
+			"group by a.meta_attr_value";
+
+	private static final String TOTAL_NUM_OF_META_ATTRS_BY_USER_DATE_SQL = 
+			"SELECT count(a.meta_id) totalAttrs FROM public.r_meta_main a, public.r_objt_metamap b  where a.meta_id = b.meta_id and b.object_id in "+
+			"(select distinct b.object_id from public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name='registered_by' and a.meta_attr_value=? and a.meta_id=b.meta_id and to_timestamp(CAST(a.create_ts as double precision)) BETWEEN ? AND ?) ";
+
+	private static final String FILE_SIZE_RANGE_BY_USER_DATE_SQL = 
+			"SELECT count(*) FROM public.r_meta_main a, public.r_objt_metamap b  where a.meta_id = b.meta_id and a.meta_attr_name = 'source_file_size' and to_number(a.meta_attr_value, '9999999999999999999') BETWEEN ? AND ? and b.object_id in " +
+					"(select distinct b.object_id from public.r_meta_main a, public.r_objt_metamap b where a.meta_attr_name='registered_by' and a.meta_attr_value=? and a.meta_id=b.meta_id and to_timestamp(CAST(a.create_ts as double precision)) BETWEEN ? AND ?)";
+	
 	//---------------------------------------------------------------------//
     // Instance members
     //---------------------------------------------------------------------//
@@ -132,111 +256,228 @@ public class HpcReportsDAOImpl implements HpcReportsDAO
     // HpcEventDAO Interface Implementation
     //---------------------------------------------------------------------//  
     
-	@Override
-	public HpcReport generatReport(HpcReportCriteria criteria) throws HpcException
-    {
-		try {
-			if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY) ||
-					criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DATE_RANGE))
-				return generateUsageSummaryReport(criteria);
-			else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DOC))
-				return generateUsageSummaryByDocReport(criteria);
-			else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DOC_BY_DATE_RANGE))
-				return generateUsageSummaryByDocDateRangeReport(criteria);
-			else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_USER))
-				return generateUsageSummaryByUserReport(criteria);
-			else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_USER_BY_DATE_RANGE))
-				return generateUsageSummaryByUserDateRangeReport(criteria);
-			
-			return null;
-		} catch(IncorrectResultSizeDataAccessException notFoundEx) {
-			    return null;
-			    
-		} catch(DataAccessException e) {
-		        throw new HpcException("Failed to generate report: " + 
-		                               e.getMessage(),
-		    	    	               HpcErrorType.DATABASE_ERROR, e);
-		}	    	
-    }
-    
-    //---------------------------------------------------------------------//
-    // Helper Methods
-    //---------------------------------------------------------------------//  
+	private String getUsersSize(HpcReportCriteria criteria, Date[] dates, Object[] docArg, Object[] docDateArgs)
+	{
+		Integer usersSize = null;
+		if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY))
+			usersSize = jdbcTemplate.queryForObject(TOTAL_NUM_OF_USERS_SQL, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DATE_RANGE))
+			usersSize = jdbcTemplate.queryForObject(TOTAL_NUM_OF_USERS_BY_DATE_SQL, dates, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DOC))
+			usersSize = jdbcTemplate.queryForObject(TOTAL_NUM_OF_USERS_BY_DOC_SQL, docArg, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DOC_BY_DATE_RANGE))
+			usersSize = jdbcTemplate.queryForObject(TOTAL_NUM_OF_USERS_BY_DOC_DATE_SQL, docDateArgs, Integer.class);
+		
+		if(usersSize != null)
+			return usersSize.toString();
+		else return "0";
+	}
+	
+	private String getTotalDataSize(HpcReportCriteria criteria, Date[] dates, String[] docArg, Object[] docDateArgs, String[] userArg, Object[] userDateArgs)
+	{
+		Integer totalSize = null;
+		if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY))
+			totalSize = jdbcTemplate.queryForObject(SUM_OF_DATA_SQL, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DATE_RANGE))
+			totalSize = jdbcTemplate.queryForObject(SUM_OF_DATA_BY_DATE_SQL, dates, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DOC))
+			totalSize = jdbcTemplate.queryForObject(SUM_OF_DATA_BY_DOC_SQL, docArg, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DOC_BY_DATE_RANGE))
+			totalSize = jdbcTemplate.queryForObject(SUM_OF_DATA_BY_DOC_DATE_SQL, docDateArgs, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_USER))
+			totalSize = jdbcTemplate.queryForObject(SUM_OF_DATA_BY_USER_SQL, userArg, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_USER_BY_DATE_RANGE))
+			totalSize = jdbcTemplate.queryForObject(SUM_OF_DATA_BY_USER_DATE_SQL, userDateArgs, Integer.class);
+		
+		if(totalSize != null)
+			return totalSize.toString();
+		else return "0";
 
-	private HpcReport generateUsageSummaryReport(HpcReportCriteria criteria)
+	}
+
+	private String getLargestSize(HpcReportCriteria criteria, Date[] dates, String[] docArg, Object[] docDateArgs, String[] userArg, Object[] userDateArgs)
+	{
+		Integer largestSize = null;
+		if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY))
+			largestSize = jdbcTemplate.queryForObject(LARGEST_FILE_SQL, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DATE_RANGE))
+			largestSize = jdbcTemplate.queryForObject(LARGEST_FILE_BY_DATE_SQL, dates, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DOC))
+			largestSize = jdbcTemplate.queryForObject(LARGEST_FILE_BY_DOC_SQL, docArg, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DOC_BY_DATE_RANGE))
+			largestSize = jdbcTemplate.queryForObject(LARGEST_FILE_BY_DOC_DATE_SQL, docDateArgs, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_USER))
+			largestSize = jdbcTemplate.queryForObject(LARGEST_FILE_BY_USER_SQL, userArg, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_USER_BY_DATE_RANGE))
+			largestSize = jdbcTemplate.queryForObject(LARGEST_FILE_BY_USER_DATE_SQL, userDateArgs, Integer.class);
+		
+		if(largestSize != null)
+			return largestSize.toString();
+		else return "0";
+	}
+
+	private String getAverageSize(HpcReportCriteria criteria, Date[] dates, String[] docArg, Object[] docDateArgs, String[] userArg, Object[] userDateArgs)
+	{
+		Integer averageSize = null;
+		if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY))
+			averageSize = jdbcTemplate.queryForObject(AVERAGE_FILE_SQL, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DATE_RANGE))
+			averageSize = jdbcTemplate.queryForObject(AVERAGE_FILE_BY_DATE_SQL, dates, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DOC))
+			averageSize = jdbcTemplate.queryForObject(AVERAGE_FILE_BY_DOC_SQL, docArg, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DOC_BY_DATE_RANGE))
+			averageSize = jdbcTemplate.queryForObject(AVERAGE_FILE_BY_DOC_DATE_SQL, docDateArgs, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_USER))
+			averageSize = jdbcTemplate.queryForObject(AVERAGE_FILE_BY_USER_SQL, userArg, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_USER_BY_DATE_RANGE))
+			averageSize = jdbcTemplate.queryForObject(AVERAGE_FILE_BY_USER_DATE_SQL, userDateArgs, Integer.class);
+		
+		if(averageSize != null)
+			return averageSize.toString();
+		else return "0";
+	}
+
+	private String getTotalDataObjSize(HpcReportCriteria criteria, Date[] dates, String[] docArg, Object[] docDateArgs, String[] userArg, Object[] userDateArgs)
+	{
+		Integer dataSize = null;
+		if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY))
+			dataSize = jdbcTemplate.queryForObject(TOTAL_NUM_OF_DATA_OBJECTS_SQL, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DATE_RANGE))
+			dataSize = jdbcTemplate.queryForObject(TOTAL_NUM_OF_DATA_OBJECTS_BY_DATE_SQL, dates, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DOC))
+			dataSize = jdbcTemplate.queryForObject(TOTAL_NUM_OF_DATA_OBJECTS_BY_DOC_SQL, docArg, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DOC_BY_DATE_RANGE))
+			dataSize = jdbcTemplate.queryForObject(TOTAL_NUM_OF_DATA_OBJECTS_BY_DOC_DATE_SQL, docDateArgs, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_USER))
+			dataSize = jdbcTemplate.queryForObject(TOTAL_NUM_OF_DATA_OBJECTS_BY_USER_SQL, userArg, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_USER_BY_DATE_RANGE))
+			dataSize = jdbcTemplate.queryForObject(TOTAL_NUM_OF_DATA_OBJECTS_BY_USER_DATE_SQL, userDateArgs, Integer.class);
+		
+		if(dataSize != null)
+			return dataSize.toString();
+		else return "0";
+	}
+
+	private List<Map<String, Object>> getTotalCollectionsSize(HpcReportCriteria criteria, Date[] dates, String[] docArg, Object[] docDateArgs, String[] userArg, Object[] userDateArgs)
+	{
+		List<Map<String, Object>> list = null;
+		if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY))
+			list = jdbcTemplate.queryForList(TOTAL_NUM_OF_COLLECTIONS_BY_NAME_SQL);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DATE_RANGE))
+			list = jdbcTemplate.queryForList(TOTAL_NUM_OF_COLLECTIONS_BY_NAME_AND_DATE_SQL, dates);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DOC))
+			list = jdbcTemplate.queryForList(TOTAL_NUM_OF_COLLECTIONS_BY_NAME_DOC_SQL, docArg);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DOC_BY_DATE_RANGE))
+			list = jdbcTemplate.queryForList(TOTAL_NUM_OF_COLLECTIONS_BY_NAME_DOC_DATE_SQL, docDateArgs);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_USER))
+			list = jdbcTemplate.queryForList(TOTAL_NUM_OF_COLLECTIONS_BY_NAME_USER_SQL, userArg);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_USER_BY_DATE_RANGE))
+			list = jdbcTemplate.queryForList(TOTAL_NUM_OF_COLLECTIONS_BY_NAME_USER_DATE_SQL, userDateArgs);
+		return list;
+	}
+
+	private String getTotalMetaAttrCount(HpcReportCriteria criteria, Date[] dates, String[] docArg, Object[] docDateArgs, String[] userArg, Object[] userDateArgs)
+	{
+		Integer metaAttrCount = null;
+		if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY))
+			metaAttrCount = jdbcTemplate.queryForObject(TOTAL_NUM_OF_META_ATTRS_SQL, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DATE_RANGE))
+			metaAttrCount = jdbcTemplate.queryForObject(TOTAL_NUM_OF_META_ATTRS_BY_DATE_SQL, dates, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DOC))
+			metaAttrCount = jdbcTemplate.queryForObject(TOTAL_NUM_OF_META_ATTRS_BY_DOC_SQL, docArg, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DOC_BY_DATE_RANGE))
+			metaAttrCount = jdbcTemplate.queryForObject(TOTAL_NUM_OF_META_ATTRS_BY_DOC_DATE_SQL, docDateArgs, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_USER))
+			metaAttrCount = jdbcTemplate.queryForObject(TOTAL_NUM_OF_META_ATTRS_BY_USER_SQL, userArg, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_USER_BY_DATE_RANGE))
+			metaAttrCount = jdbcTemplate.queryForObject(TOTAL_NUM_OF_META_ATTRS_BY_USER_DATE_SQL, userDateArgs, Integer.class);
+		
+		if(metaAttrCount != null)
+			return metaAttrCount.toString();
+		else return "0";
+	}
+	
+	private String getFileSize(HpcReportCriteria criteria, Object[] fileSizeArgs, Object[] filesizedateArgs, Object[] filesizedocArgs, Object[] filesizedocDateArgs, Object[] filesizeuserArgs, Object[] filesizeuserDateArgs)
+	{
+		Integer fileSize = null;
+		if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY))
+			fileSize = jdbcTemplate.queryForObject(FILE_SIZE_RANGE_SQL, fileSizeArgs, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DATE_RANGE))
+			fileSize = jdbcTemplate.queryForObject(FILE_SIZE_RANGE_BY_DATE_SQL, filesizedateArgs, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DOC))
+			fileSize = jdbcTemplate.queryForObject(FILE_SIZE_RANGE_BY_DOC_SQL, filesizedocArgs, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_DOC_BY_DATE_RANGE))
+			fileSize = jdbcTemplate.queryForObject(FILE_SIZE_RANGE_BY_DOC_DATE_SQL, filesizedocDateArgs, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_USER))
+			fileSize = jdbcTemplate.queryForObject(FILE_SIZE_RANGE_BY_USER_SQL, filesizeuserArgs, Integer.class);
+		else if(criteria.getType().equals(HpcReportType.USAGE_SUMMARY_BY_USER_BY_DATE_RANGE))
+			fileSize = jdbcTemplate.queryForObject(FILE_SIZE_RANGE_BY_USER_DATE_SQL, filesizeuserDateArgs, Integer.class);
+		
+		if(fileSize != null)
+			return fileSize.toString();
+		else return "0";
+	}	
+	
+	public HpcReport generatReport(HpcReportCriteria criteria)
 	{
 		HpcReport report = new HpcReport();
 
-		boolean isRangeType = false;
-		if(criteria.getFromDate() != null && criteria.getToDate() != null)
-			isRangeType = true;
 		//Total Users
-		Integer usersSize = null;
-		Date[] dates = new Date[2];
-		if(isRangeType)
+		Date fromDate = null;
+		Date toDate = null;
+		if(criteria.getFromDate() != null && criteria.getToDate() != null)
 		{
-			dates[0] = criteria.getFromDate().getTime();
-			dates[1] = criteria.getToDate().getTime();
+			fromDate = criteria.getFromDate().getTime();
+			toDate = criteria.getToDate().getTime();
 		}
+		Date[] dateArgs = new Date[2];
+		dateArgs[0] = fromDate;
+		dateArgs[1] = toDate;
 
-		if(isRangeType)
-			usersSize = jdbcTemplate.queryForObject(TOTAL_NUM_OF_USERS_BY_DATE_SQL, dates, Integer.class);
-		else
-			usersSize = jdbcTemplate.queryForObject(TOTAL_NUM_OF_USERS_SQL, Integer.class);
-			
+		String[] docArg = new String[1];
+		docArg[0] = criteria.getDoc();
+		
+		Object[] docDateArgs = new Object[3];
+		docDateArgs[0] = criteria.getDoc();
+		docDateArgs[1] = fromDate;
+		docDateArgs[2] = toDate;
+		
+		String[] userArg = new String[1];
+		docArg[0] = criteria.getUser();
+		
+		Object[] userDateArgs = new Object[3];
+		docDateArgs[0] = criteria.getUser();
+		docDateArgs[1] = fromDate;
+		docDateArgs[2] = toDate;
+		
+		//TOTAL_NUM_OF_REGISTERED_USERS
 		HpcReportEntry userSizeEntry = new HpcReportEntry();
 		userSizeEntry.setAttribute(HpcReportEntryAttribute.TOTAL_NUM_OF_REGISTERED_USERS);
-		userSizeEntry.setValue(Integer.toString(usersSize == null ? 0 : usersSize));
+		userSizeEntry.setValue(getUsersSize(criteria, dateArgs, docArg, docDateArgs));
 
-		//Total Size
-		Long totalSize = null;
-		if(isRangeType)
-			totalSize = jdbcTemplate.queryForObject(SUM_OF_DATA_BY_DATE_SQL, dates, Long.class);
-		else
-			totalSize = jdbcTemplate.queryForObject(SUM_OF_DATA_SQL, Long.class);
-			
+		
+		//Total Size - TOTAL_DATA_SIZE
 		HpcReportEntry sizeEntry = new HpcReportEntry();
 		sizeEntry.setAttribute(HpcReportEntryAttribute.TOTAL_DATA_SIZE);
-		sizeEntry.setValue(Long.toString(totalSize == null ? 0 : totalSize));
+		sizeEntry.setValue(getTotalDataSize(criteria, dateArgs, docArg, docDateArgs, userArg, userDateArgs));
 		
-		//Largest file
-		Long largestFileSize = null;
-		if(isRangeType)
-			largestFileSize = jdbcTemplate.queryForObject(LARGEST_FILE_BY_DATE_SQL, dates, Long.class);
-		else
-			largestFileSize = jdbcTemplate.queryForObject(LARGEST_FILE_SQL, Long.class);
-			
+		//Largest file - LARGEST_FILE_SIZE
 		HpcReportEntry largestFileSizeEntry = new HpcReportEntry();
 		largestFileSizeEntry.setAttribute(HpcReportEntryAttribute.LARGEST_FILE_SIZE);
-		largestFileSizeEntry.setValue(Long.toString(largestFileSize == null ? 0 : largestFileSize));
+		largestFileSizeEntry.setValue(getLargestSize(criteria, dateArgs, docArg, docDateArgs, userArg, userDateArgs));
 		
-		//Average file
-		Long averageFileSize = null;
-		if(isRangeType)
-			averageFileSize = jdbcTemplate.queryForObject(AVERAGE_FILE_BY_DATE_SQL, dates, Long.class);
-		else
-			averageFileSize = jdbcTemplate.queryForObject(AVERAGE_FILE_SQL, Long.class);
+		//Average file - AVERAGE_FILE_SIZE
 		HpcReportEntry averageFileSizeEntry = new HpcReportEntry();
 		averageFileSizeEntry.setAttribute(HpcReportEntryAttribute.AVERAGE_FILE_SIZE);
-		averageFileSizeEntry.setValue(Long.toString(averageFileSize == null ? 0 : averageFileSize));
+		averageFileSizeEntry.setValue(getAverageSize(criteria, dateArgs, docArg, docDateArgs, userArg, userDateArgs));
 
-		//Total number of data objects
-		Long numOfDataObj = null;
-		if(isRangeType)
-			numOfDataObj = jdbcTemplate.queryForObject(TOTAL_NUM_OF_DATA_OBJECTS_BY_DATE_SQL, dates, Long.class);
-		else
-			numOfDataObj = jdbcTemplate.queryForObject(TOTAL_NUM_OF_DATA_OBJECTS_SQL, Long.class);
+		//Total number of data objects - TOTAL_NUM_OF_DATA_OBJECTS
 		HpcReportEntry numOfDataObjEntry = new HpcReportEntry();
 		numOfDataObjEntry.setAttribute(HpcReportEntryAttribute.TOTAL_NUM_OF_DATA_OBJECTS);
-		numOfDataObjEntry.setValue(Long.toString(numOfDataObj == null ? 0 : numOfDataObj));
+		numOfDataObjEntry.setValue(getTotalDataObjSize(criteria, dateArgs, docArg, docDateArgs, userArg, userDateArgs));
 
-		//Total number of collections
-		List<Map<String, Object>> list = null;
-		if(isRangeType)
-			list = jdbcTemplate.queryForList(TOTAL_NUM_OF_COLLECTIONS_BY_NAME_AND_DATE_SQL, dates);
-		else
-			list = jdbcTemplate.queryForList(TOTAL_NUM_OF_COLLECTIONS_BY_NAME_SQL);
-		List<String> entryList = new ArrayList<String>();
+		//Total number of collections - TOTAL_NUM_OF_COLLECTIONS
+		List<Map<String, Object>> list = getTotalCollectionsSize(criteria, dateArgs, docArg, docDateArgs, userArg, userDateArgs);
 		StringBuffer str = new StringBuffer();
         str.append("\n");
         if(list != null)
@@ -263,155 +504,219 @@ public class HpcReportsDAOImpl implements HpcReportsDAO
 		numOfCollEntry.setAttribute(HpcReportEntryAttribute.TOTAL_NUM_OF_COLLECTIONS);
 		numOfCollEntry.setValue(str.toString());
 
-		//Total Meta attributes Size
-		Long totalMetaSize = null;
-		if(isRangeType)
-			totalMetaSize = jdbcTemplate.queryForObject(TOTAL_NUM_OF_META_ATTRS_BY_DATE_SQL, dates, Long.class);
-		else
-			totalMetaSize = jdbcTemplate.queryForObject(TOTAL_NUM_OF_META_ATTRS_SQL, Long.class);
+		//Total Meta attributes Size - TOTAL_NUMBER_OF_META_ATTRS
 		HpcReportEntry metasizeEntry = new HpcReportEntry();
 		metasizeEntry.setAttribute(HpcReportEntryAttribute.TOTAL_NUMBER_OF_META_ATTRS);
-		metasizeEntry.setValue(Long.toString(totalMetaSize == null ? 0 : totalMetaSize));
+		metasizeEntry.setValue(getTotalMetaAttrCount(criteria, dateArgs, docArg, docDateArgs, userArg, userDateArgs));
 		
-		//Distribution of files
-		Object[] fileSizeArgs = null;
-		if (isRangeType)
-		{
-			fileSizeArgs = new Object[4];
-			fileSizeArgs[0] = criteria.getFromDate().getTime();
-			fileSizeArgs[1] = criteria.getToDate().getTime();
-			fileSizeArgs[2] = Long.valueOf(0);
-			fileSizeArgs[3] = Long.valueOf(1000000);
-		}
-		else
-		{
-			fileSizeArgs = new Object[2];
-			fileSizeArgs[0] = Long.valueOf(0);
-			fileSizeArgs[1] = Long.valueOf(1000000);
-		}
-		Long mbCount = null;
-		if(isRangeType)
-			mbCount = jdbcTemplate.queryForObject(FILE_SIZE_RANGE_BY_DATE_SQL, Long.class, fileSizeArgs );
-		else
-			mbCount = jdbcTemplate.queryForObject(FILE_SIZE_RANGE_SQL, Long.class, fileSizeArgs );
+		//Distribution of files - FILE_SIZE_BELOW_1_MB
+		Long lower = Long.valueOf(0);
+		Long upper = Long.valueOf(1000000);
+
+		Object[] fileSizeArgs  = new Object[2];
+		fileSizeArgs[0] = lower;
+		fileSizeArgs[1] = upper;
+
+		Object[] filesizedateArgs = new Object[4];
+		filesizedateArgs[0] = fromDate;
+		filesizedateArgs[1] = toDate;
+		filesizedateArgs[2] = lower;
+		filesizedateArgs[3] = upper;
+
+		Object[] filesizedocArgs = new Object[3];
+		filesizedocArgs[0] = lower;
+		filesizedocArgs[1] = upper;
+		filesizedateArgs[2] = criteria.getDoc();
+
+		Object[] filesizedocDateArgs = new Object[5];
+		filesizedocDateArgs[0] = lower;
+		filesizedocDateArgs[1] = upper;
+		filesizedocDateArgs[2] = criteria.getDoc();
+		filesizedocDateArgs[3] = fromDate;
+		filesizedocDateArgs[4] = toDate;
+
+		Object[] filesizeuserArgs = new Object[3];
+		filesizeuserArgs[0] = lower;
+		filesizeuserArgs[1] = upper;
+		filesizeuserArgs[2] = criteria.getUser();
+
+		Object[] filesizeuserDateArgs = new Object[5];
+		filesizeuserDateArgs[0] = lower;
+		filesizeuserDateArgs[1] = upper;
+		filesizeuserDateArgs[2] = criteria.getUser();
+		filesizeuserDateArgs[3] = fromDate;
+		filesizeuserDateArgs[4] = toDate;
+		
 		HpcReportEntry oneMBEntry = new HpcReportEntry();
 		oneMBEntry.setAttribute(HpcReportEntryAttribute.FILE_SIZE_BELOW_1_MB);
-		oneMBEntry.setValue(Long.toString(mbCount == null ? 0 : mbCount));
+		oneMBEntry.setValue(getFileSize(criteria, fileSizeArgs, filesizedateArgs, filesizedocArgs, filesizedocDateArgs, filesizeuserArgs, filesizeuserDateArgs));
 		
-		if(isRangeType)
-		{
-			fileSizeArgs[2] = Long.valueOf(1000000);
-			fileSizeArgs[3] = Long.valueOf(10000000);
-			mbCount = jdbcTemplate.queryForObject(FILE_SIZE_RANGE_BY_DATE_SQL, Long.class, fileSizeArgs );
-		}
-		else
-		{
-			fileSizeArgs[0] = Long.valueOf(1000000);
-			fileSizeArgs[1] = Long.valueOf(10000000);
-			mbCount = jdbcTemplate.queryForObject(FILE_SIZE_RANGE_SQL, Long.class, fileSizeArgs );
-		}
-		
+		lower = Long.valueOf(1000000);
+		upper = Long.valueOf(10000000);
+		fileSizeArgs[0] = lower;
+		fileSizeArgs[1] = upper;
+
+		filesizedateArgs[2] = lower;
+		filesizedateArgs[3] = upper;
+
+		filesizedocArgs[0] = lower;
+		filesizedocArgs[1] = upper;
+
+		filesizedocArgs[0] = lower;
+		filesizedocArgs[1] = upper;
+
+		filesizeuserArgs[0] = lower;
+		filesizeuserArgs[1] = upper;
+
+		filesizeuserDateArgs[0] = lower;
+		filesizeuserDateArgs[1] = upper;
+
 		HpcReportEntry tenMBEntry = new HpcReportEntry();
 		tenMBEntry.setAttribute(HpcReportEntryAttribute.FILE_SIZE_1_MB_10_MB);
-		tenMBEntry.setValue(Long.toString(mbCount == null ? 0 : mbCount));
+		tenMBEntry.setValue(getFileSize(criteria, fileSizeArgs, filesizedateArgs, filesizedocArgs, filesizedocDateArgs, filesizeuserArgs, filesizeuserDateArgs));
 		
-		if(isRangeType)
-		{
-			fileSizeArgs[2] = Long.valueOf(10000000);
-			fileSizeArgs[3] = Long.valueOf(50000000);
-			mbCount = jdbcTemplate.queryForObject(FILE_SIZE_RANGE_BY_DATE_SQL, Long.class, fileSizeArgs );
-		}
-		else
-		{
-			fileSizeArgs[0] = Long.valueOf(10000000);
-			fileSizeArgs[1] = Long.valueOf(50000000);
-			mbCount = jdbcTemplate.queryForObject(FILE_SIZE_RANGE_SQL, Long.class, fileSizeArgs );
-		}
+		lower = Long.valueOf(10000000);
+		upper = Long.valueOf(50000000);
+		fileSizeArgs[0] = lower;
+		fileSizeArgs[1] = upper;
+
+		filesizedateArgs[2] = lower;
+		filesizedateArgs[3] = upper;
+
+		filesizedocArgs[0] = lower;
+		filesizedocArgs[1] = upper;
+
+		filesizedocArgs[0] = lower;
+		filesizedocArgs[1] = upper;
+
+		filesizeuserArgs[0] = lower;
+		filesizeuserArgs[1] = upper;
+
+		filesizeuserDateArgs[0] = lower;
+		filesizeuserDateArgs[1] = upper;
+
 		HpcReportEntry fiftyMBEntry = new HpcReportEntry();
 		fiftyMBEntry.setAttribute(HpcReportEntryAttribute.FILE_SIZE_10_MB_50_MB);
-		fiftyMBEntry.setValue(Long.toString(mbCount == null ? 0 : mbCount));
+		fiftyMBEntry.setValue(getFileSize(criteria, fileSizeArgs, filesizedateArgs, filesizedocArgs, filesizedocDateArgs, filesizeuserArgs, filesizeuserDateArgs));
 
-		if(isRangeType)
-		{
-			fileSizeArgs[2] = Long.valueOf(50000000);
-			fileSizeArgs[3] = Long.valueOf(100000000);
-			mbCount = jdbcTemplate.queryForObject(FILE_SIZE_RANGE_BY_DATE_SQL, Long.class, fileSizeArgs );
-		}
-		else
-		{
-			fileSizeArgs[0] = Long.valueOf(50000000);
-			fileSizeArgs[1] = Long.valueOf(100000000);
-			mbCount = jdbcTemplate.queryForObject(FILE_SIZE_RANGE_SQL, Long.class, fileSizeArgs );
-		}
+		lower = Long.valueOf(50000000);
+		upper = Long.valueOf(100000000);
+		fileSizeArgs[0] = lower;
+		fileSizeArgs[1] = upper;
+
+		filesizedateArgs[2] = lower;
+		filesizedateArgs[3] = upper;
+
+		filesizedocArgs[0] = lower;
+		filesizedocArgs[1] = upper;
+
+		filesizedocArgs[0] = lower;
+		filesizedocArgs[1] = upper;
+
+		filesizeuserArgs[0] = lower;
+		filesizeuserArgs[1] = upper;
+
+		filesizeuserDateArgs[0] = lower;
+		filesizeuserDateArgs[1] = upper;
 		HpcReportEntry hundredMBEntry = new HpcReportEntry();
 		hundredMBEntry.setAttribute(HpcReportEntryAttribute.FILE_SIZE_50_MB_100_MB);
-		hundredMBEntry.setValue(Long.toString(mbCount == null ? 0 : mbCount));
+		hundredMBEntry.setValue(getFileSize(criteria, fileSizeArgs, filesizedateArgs, filesizedocArgs, filesizedocDateArgs, filesizeuserArgs, filesizeuserDateArgs));
 
-		if(isRangeType)
-		{
-			fileSizeArgs[2] = Long.valueOf(100000000);
-			fileSizeArgs[3] = Long.valueOf(500000000);
-			mbCount = jdbcTemplate.queryForObject(FILE_SIZE_RANGE_BY_DATE_SQL, Long.class, fileSizeArgs );
-		}
-		else
-		{
-			fileSizeArgs[0] = Long.valueOf(100000000);
-			fileSizeArgs[1] = Long.valueOf(500000000);
-			mbCount = jdbcTemplate.queryForObject(FILE_SIZE_RANGE_SQL, Long.class, fileSizeArgs );
-		}
+		lower = Long.valueOf(100000000);
+		upper = Long.valueOf(500000000);
+		fileSizeArgs[0] = lower;
+		fileSizeArgs[1] = upper;
+
+		filesizedateArgs[2] = lower;
+		filesizedateArgs[3] = upper;
+
+		filesizedocArgs[0] = lower;
+		filesizedocArgs[1] = upper;
+
+		filesizedocArgs[0] = lower;
+		filesizedocArgs[1] = upper;
+
+		filesizeuserArgs[0] = lower;
+		filesizeuserArgs[1] = upper;
+
+		filesizeuserDateArgs[0] = lower;
+		filesizeuserDateArgs[1] = upper;
 		HpcReportEntry fivehundredMBEntry = new HpcReportEntry();
 		fivehundredMBEntry.setAttribute(HpcReportEntryAttribute.FILE_SIZE_100_MB_500_MB);
-		fivehundredMBEntry.setValue(Long.toString(mbCount == null ? 0 : mbCount));
+		fivehundredMBEntry.setValue(getFileSize(criteria, fileSizeArgs, filesizedateArgs, filesizedocArgs, filesizedocDateArgs, filesizeuserArgs, filesizeuserDateArgs));
 
-		if(isRangeType)
-		{
-			fileSizeArgs[2] = Long.valueOf(500000000);
-			fileSizeArgs[3] = Long.valueOf(1000000000);
-			mbCount = jdbcTemplate.queryForObject(FILE_SIZE_RANGE_BY_DATE_SQL, Long.class, fileSizeArgs );
-		}
-		else
-		{
-			fileSizeArgs[0] = Long.valueOf(500000000);
-			fileSizeArgs[1] = Long.valueOf(1000000000);
-			mbCount = jdbcTemplate.queryForObject(FILE_SIZE_RANGE_SQL, Long.class, fileSizeArgs );
-		}
+		lower = Long.valueOf(500000000);
+		upper = Long.valueOf(1000000000);
+		fileSizeArgs[0] = lower;
+		fileSizeArgs[1] = upper;
+
+		filesizedateArgs[2] = lower;
+		filesizedateArgs[3] = upper;
+
+		filesizedocArgs[0] = lower;
+		filesizedocArgs[1] = upper;
+
+		filesizedocArgs[0] = lower;
+		filesizedocArgs[1] = upper;
+
+		filesizeuserArgs[0] = lower;
+		filesizeuserArgs[1] = upper;
+
+		filesizeuserDateArgs[0] = lower;
+		filesizeuserDateArgs[1] = upper;
 		HpcReportEntry onegbEntry = new HpcReportEntry();
 		onegbEntry.setAttribute(HpcReportEntryAttribute.FILE_SIZE_500_MB_1_GB);
-		onegbEntry.setValue(Long.toString(mbCount == null ? 0 : mbCount));
+		onegbEntry.setValue(getFileSize(criteria, fileSizeArgs, filesizedateArgs, filesizedocArgs, filesizedocDateArgs, filesizeuserArgs, filesizeuserDateArgs));
 
-		if(isRangeType)
-		{
-			fileSizeArgs[2] = Long.valueOf(1000000000);
-			fileSizeArgs[3] = new Long("10000000000");
-			mbCount = jdbcTemplate.queryForObject(FILE_SIZE_RANGE_BY_DATE_SQL, Long.class, fileSizeArgs );
-		}
-		else
-		{
-			fileSizeArgs[0] = Long.valueOf(1000000000);
-			fileSizeArgs[1] = new Long("10000000000");
-			mbCount = jdbcTemplate.queryForObject(FILE_SIZE_RANGE_SQL, Long.class, fileSizeArgs );
-		}
+		lower = Long.valueOf(1000000000);
+		upper = new Long("10000000000");
+		fileSizeArgs[0] = lower;
+		fileSizeArgs[1] = upper;
+
+		filesizedateArgs[2] = lower;
+		filesizedateArgs[3] = upper;
+
+		filesizedocArgs[0] = lower;
+		filesizedocArgs[1] = upper;
+
+		filesizedocArgs[0] = lower;
+		filesizedocArgs[1] = upper;
+
+		filesizeuserArgs[0] = lower;
+		filesizeuserArgs[1] = upper;
+
+		filesizeuserDateArgs[0] = lower;
+		filesizeuserDateArgs[1] = upper;
 		HpcReportEntry tengbEntry = new HpcReportEntry();
 		tengbEntry.setAttribute(HpcReportEntryAttribute.FILE_SIZE_1_GB_10_GB);
-		tengbEntry.setValue(Long.toString(mbCount == null ? 0 : mbCount));
+		tengbEntry.setValue(getFileSize(criteria, fileSizeArgs, filesizedateArgs, filesizedocArgs, filesizedocDateArgs, filesizeuserArgs, filesizeuserDateArgs));
 
-		if(isRangeType)
-		{
-			fileSizeArgs[2] = new Long("10000000000");
-			fileSizeArgs[3] = new Long("100000000000000");
-			mbCount = jdbcTemplate.queryForObject(FILE_SIZE_RANGE_BY_DATE_SQL, Long.class, fileSizeArgs );
-		}
-		else
-		{
-			fileSizeArgs[0] = new Long("10000000000");
-			fileSizeArgs[1] = new Long("100000000000000");
-			mbCount = jdbcTemplate.queryForObject(FILE_SIZE_RANGE_SQL, Long.class, fileSizeArgs );
-		}
+		lower = new Long("10000000000");
+		upper = new Long("100000000000000");
+		fileSizeArgs[0] = lower;
+		fileSizeArgs[1] = upper;
+
+		filesizedateArgs[2] = lower;
+		filesizedateArgs[3] = upper;
+
+		filesizedocArgs[0] = lower;
+		filesizedocArgs[1] = upper;
+
+		filesizedocArgs[0] = lower;
+		filesizedocArgs[1] = upper;
+
+		filesizeuserArgs[0] = lower;
+		filesizeuserArgs[1] = upper;
+
+		filesizeuserDateArgs[0] = lower;
+		filesizeuserDateArgs[1] = upper;
 		HpcReportEntry overtengbEntry = new HpcReportEntry();
 		overtengbEntry.setAttribute(HpcReportEntryAttribute.FILE_SIZE_OVER_10_GB);
-		overtengbEntry.setValue(Long.toString(mbCount == null ? 0 : mbCount));
+		overtengbEntry.setValue(getFileSize(criteria, fileSizeArgs, filesizedateArgs, filesizedocArgs, filesizedocDateArgs, filesizeuserArgs, filesizeuserDateArgs));
 
 		report.setGeneratedOn(Calendar.getInstance());
+		report.setDoc(criteria.getDoc());
+		report.setUser(criteria.getUser());
 		report.setType(criteria.getType());
 		if(criteria.getFromDate() != null)
 			report.setFromDate(criteria.getFromDate());
